AX ITM: Fix for accessibility/auto-fill-types.html in isolated tree mode. https://bugs.webkit.org/show_bug.cgi?id=242268

Reviewed by Chris Fleizach.

This test was failing due to that the autofill properties were not getting updated. This patch fixes the problem by adding an accessibility Notification for when the autofill type changes, so that the isolated tree can be updated accordingly.
In addition, deferred AttributeChanged notifications were being stored in a HashMap with Element* as the key. This was the cause of the problem that only the first deferred notification for a given Elemen was handled. In the case of an auto-fill button, there are several deferred AttributeChanged notifications are fired in a row, thus we were missing to update the isolated tree for most of those notifications. Solved this problem by replacing the HashMap with a Vector<pair<...>>.
Added more logging in order to debug remaining issues with AXObjectCache.

* LayoutTests/accessibility/auto-fill-types-expected.txt:
* LayoutTests/accessibility/auto-fill-types.html:
* Source/WebCore/accessibility/AXLogger.cpp:
(WebCore::operator<<):
Added case for logging the new notification.
* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::autofillTypeChanged):
(WebCore::AXObjectCache::updateIsolatedTree):
* Source/WebCore/accessibility/AXObjectCache.h:
(WebCore::AXObjectCache::autofillTypeChanged):
* Source/WebCore/accessibility/isolatedtree/AXIsolatedTree.cpp:
(WebCore::AXIsolatedTree::updateNodeProperty):
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.h:
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperBase.mm:
(-[WebAccessibilityObjectWrapperBase baseAccessibilityDescription]): Deleted.
* Source/WebCore/accessibility/mac/WebAccessibilityObjectWrapperMac.mm:
(-[WebAccessibilityObjectWrapper accessibilityAttributeValue:]):
Code cleanup, removed unnecessary wrapper method.
* Source/WebCore/html/HTMLInputElement.cpp:
(WebCore::HTMLInputElement::setShowAutoFillButton):
Added notification for accessibility.

Canonical link: https://commits.webkit.org/252332@main